--- a/public/pages/community-post.html
+++ b/public/pages/community-post.html
@@ -20,6 +20,18 @@
             <small>Posted {{post.created_at | date : 'medium'}}</small>
           </h2>
           <div>{{post.content}}</div>
+          <hr />
+          <button class='btn btn-success pull-right' ng-click='{{replyTo(post)}}'>Reply</button>
+        </div>
+
+        <div class='replies clearfix'>
+          <div class='reply' ng-repeat='reply in replies'>
+            <h4>
+              {{reply.title}}
+              <small>Posted {{reply.created_at | date : 'medium'}}</small>
+            </h4>
+            <div>{{reply.content}}</div>
+          </div>
         </div>
 
       </div>
