--- a/public/pages/controller.html
+++ b/public/pages/controller.html
@@ -7,19 +7,42 @@
         <span>Controller</span>              
       </h1>
     </div>
-    <div class="pull-left"><strong>Your UUID is:</strong> {{skynetuuid}}</div><br />
+    <div class="pull-left"><strong>Your UUID is:</strong> {{skynetuuid}}</div><br />            
 
-    <h2>Send Message</h2><br />
+    <h2><i class='icon-magic'></i> Message Devices</h2><br />
 
     <div class="form-inline">
+        Select Device or Enter UUID:<br /><br />
       <div class="form-group">
-        <select ng-model="device" ng-options="device.name for device in devices" class="form-control"></select>
+        <!-- <select ng-model="device" ng-options="device.name for device in devices" class="form-control"></select> -->
+        <select ng-model="device" ng-options="device.name for device in devices" class="form-control" id="device" ng-change="getSubdevices(device)"></select>            
+
       </div>
       <div class="form-group"> OR </div>
       <div class="form-group">
         <input size="40" ng-model="sendUuid" class="form-control" placeholder="UUID">
       </div>
       <br /><br />
+
+      <div ng-show="subdevices">
+        Select a Gateway Subdevice:<br /><br />
+        <select ng-model="subdevice" ng-options="subdevice.name for subdevice in subdevices" class="form-control" id="subdevice" ng-change="getSchema(device, subdevice)"></select> 
+        <br /><br />
+      </div>
+
+      <div ng-show="schema">
+        {{schema}}
+        <br /><br />
+        <input type="text" ng-model="subDeviceName" placeholder="name" class="form-control" required>
+        <div class="form-group" ng-repeat="deviceProperty in deviceProperties">
+          <div ng-if="deviceProperty.type == 'string'">
+            <input type="text" ng-model="deviceProperty.value" placeholder="{{deviceProperty.name}}" class="form-control" ng-required="deviceProperty.required">
+          </div>
+        </div>
+        <br /><br />
+      </div>
+
+
     </div>
     <input ng-model="sendText" class="form-control" placeholder="Message">
     <br />
