added markdown on save of posts

--- a/public/pages/community-post.html
+++ b/public/pages/community-post.html
@@ -19,7 +19,7 @@
             {{post.title}}
             <small>Posted {{post.created_at | date : 'medium'}}</small>
           </h2>
-          <div>{{post.content}}</div>
+          <div ng-bind-html="post.content"></div>
           <hr />
           <button class='btn btn-success pull-right' ng-click='{{replyTo(post)}}'>Reply</button>
         </div>
