--- a/public/pages/community.html
+++ b/public/pages/community.html
@@ -41,7 +41,7 @@
                     <input type='text' class='form-control' placeholder='Title' ng-model='post.title' />
                   </div>
                   <div class='form-group'>
-                    <textarea class='form-control' placeholder='Content'  ng-model='post.content'></textarea>
+                    <textarea class='form-control' placeholder='Content'  ng-model='post.markdownContent'></textarea>
                     <div class='help-block'>
                       Content can be formatted using <a href='http://daringfireball.net/projects/markdown/basics' target='blank'>Markdown</a>
                     </div>
