--- a/public/pages/apis.html
+++ b/public/pages/apis.html
@@ -44,6 +44,7 @@
 </div> -->
 
 
+<button class="btn btn-success pull-right" ng-click="openNewApi()">Add</button>
 
  <div class="divScroll">
  	<div class="scrollWrapper">
@@ -75,7 +76,7 @@
 		</div>
 		
 		<div>
-			<h3><i class='icon-edit'></i> Custom <button class="btn btn-primary" ng-click="openNewApi()">Add</button></h3>
+			<h3><i class='icon-edit'></i> Custom </h3>
 	  
 		  	<ul class="channellist">
  
