fixed resource tab from refreshing page

--- a/public/index.html
+++ b/public/index.html
@@ -165,7 +165,7 @@
 
 
             <li id="nav-resources" class=''>
-              <a class='dropdown-collapse ' href="#" g-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
+              <a class='dropdown-collapse ' href="" g-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
                 <i class='icon-book'></i>
                 <span>Resources</span>
                 <i class='icon-angle-down angle-down'></i>
