--- a/public/pages/community-post.html
+++ b/public/pages/community-post.html
@@ -20,19 +20,27 @@
             <small>Posted {{post.created_at | date : 'medium'}}</small>
           </h2>
           <div ng-bind-html="post.content"></div>
-          <hr />
-          <button class='btn btn-success pull-right' ng-click='{{replyTo(post)}}'>Reply</button>
+        </div>
+        
+        <br />
+        <div>
+          <div id="disqus_thread"></div>
+            <script type="text/javascript">
+                /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                var disqus_shortname = 'octoblu'; // required: replace example with your forum shortname
+
+                /* * * DON'T EDIT BELOW THIS LINE * * */
+                (function() {
+                    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+            <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+    
         </div>
 
-        <div class='replies clearfix'>
-          <div class='reply' ng-repeat='reply in replies'>
-            <h4>
-              {{reply.title}}
-              <small>Posted {{reply.created_at | date : 'medium'}}</small>
-            </h4>
-            <div>{{reply.content}}</div>
-          </div>
-        </div>
 
       </div>
     </div>
