--- a/public/pages/api_editor.html
+++ b/public/pages/api_editor.html
@@ -51,9 +51,9 @@
     </div>
     <div class="row col-xs-12">
 
-    <div ng-show="channel.logo" class="pull-right">
-      <img src="{{channel.logo}}" ng-show="channel.logo" />
-    </div>
+      <div ng-show="channel.logo">
+        <img ng-src="{{channel.logo}}" ng-show="channel.logo" width="100" height="100"/>
+      </div>
 
         <h3>{{channel.name}}</h3>
 
