Adding form input from device schema on controller tab.

--- a/public/pages/controller.html
+++ b/public/pages/controller.html
@@ -33,8 +33,7 @@
       <div ng-show="schema">
         {{schema}}
 
-
-        <br /><br />
+       <div id="device-msg-editor"></div>
       </div>
 
 
