--- a/public/index.html
+++ b/public/index.html
@@ -216,6 +216,7 @@
 
   <script src="/assets/javascripts/plugins/validate/jquery.validate.min.js" type="text/javascript"></script>
   <script src="/assets/javascripts/plugins/validate/additional-methods.js" type="text/javascript"></script>
+  <script src="/assets/javascripts/jquery.jsoneditor.js" type="text/javascript"></script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-route.min.js"></script>
