--- a/public/pages/gateways.html
+++ b/public/pages/gateways.html
@@ -51,6 +51,7 @@
             <a class="btn" href="/gateway?uuid={{gateway.uuid}}"><i class="icon-reply"></i> Goto</a>
 
             <span class="pull-right" ng-show="gateway.online"> online </span>
+            <span class="pull-right" ng-show="!gateway.online"> offline </span>
 
           </div>
         </h3>
