--- a/public/pages/api_editor.html
+++ b/public/pages/api_editor.html
@@ -194,6 +194,26 @@
                 ng-model="selectedResource.authentication.required" ng-true-value="true" ng-false-value="false" />
             </div>
             
+            <div class="field">
+              <label for="resource_resourcename">Params</label>
+              <input class="form-control" type="text" ng-model="selectedResource.params.url" />
+              <div ng-repeat="param in params" class="form-inline">
+                <div class="form-group">
+                  <input class="form-control" type="text" ng-model="param.name" placeholder="name">
+                </div>
+                <div class="form-group">
+                  <input class="form-control" ng-model="param.value" placeholder="Value">
+                  <select class="form-control" ng-model="param.type" ng-options="a for a in ['string', 'number', 'boolean']"></select>
+                </div>
+                <div class="form-group">
+                  <input type="checkbox" class="form-control" ng-model="param.required">
+                </div>
+                <a href ng-click="removeParam($index)"> <i class="icon-minus"></i></a>
+                <a href ng-click="addParam()"> <i class="icon-plus"></i></a>
+
+              </div>
+
+            </div>
 
 
         </div>
