--- a/public/pages/api_editor.html
+++ b/public/pages/api_editor.html
@@ -196,8 +196,8 @@
             
             <div class="field">
               <label for="resource_resourcename">Params</label>
-              <input class="form-control" type="text" ng-model="selectedResource.params.url" />
-              <div ng-repeat="param in params" class="form-inline">
+              <a href="" ng-click="addParam()"><i class="icon-plus"></i></a>
+              <div ng-repeat="param in selectedResource.params" class="form-inline">
                 <div class="form-group">
                   <input class="form-control" type="text" ng-model="param.name" placeholder="name">
                 </div>
@@ -206,10 +206,9 @@
                   <select class="form-control" ng-model="param.type" ng-options="a for a in ['string', 'number', 'boolean']"></select>
                 </div>
                 <div class="form-group">
-                  <input type="checkbox" class="form-control" ng-model="param.required">
+                  <input type="checkbox" class="form-control" ng-model="param.required" ng-true-value="true" ng-false-value="false">
                 </div>
                 <a href ng-click="removeParam($index)"> <i class="icon-minus"></i></a>
-                <a href ng-click="addParam()"> <i class="icon-plus"></i></a>
 
               </div>
 
