--- a/public/pages/api_editor.html
+++ b/public/pages/api_editor.html
@@ -202,12 +202,13 @@
                   <input class="form-control" type="text" ng-model="param.name" placeholder="name">
                 </div>
                 <div class="form-group">
-                  <input class="form-control" ng-model="param.value" placeholder="Value">
                   <select class="form-control" ng-model="param.type" ng-options="a for a in ['string', 'number', 'boolean']"></select>
                 </div>
                 <div class="form-group">
                   <input type="checkbox" class="form-control" ng-model="param.required" ng-true-value="true" ng-false-value="false">
+                  <label>Required</label>
                 </div>
+                &nbsp;&nbsp;
                 <a href ng-click="removeParam($index)"> <i class="icon-minus"></i></a>
 
               </div>
