--- a/public/pages/api_editor.html
+++ b/public/pages/api_editor.html
@@ -205,6 +205,9 @@
                   <select class="form-control" ng-model="param.type" ng-options="a for a in ['string', 'number', 'boolean']"></select>
                 </div>
                 <div class="form-group">
+                  <select class="form-control" ng-model="param.style" ng-options="a for a in ['query', 'header', 'body']"></select>
+                </div>
+                <div class="form-group">
                   <input type="checkbox" class="form-control" ng-model="param.required" ng-true-value="true" ng-false-value="false">
                   <label>Required</label>
                 </div>
