--- a/public/pages/apis.html
+++ b/public/pages/apis.html
@@ -72,8 +72,8 @@
 			  	<li ng-repeat="channel in channelList | filter:isInactive | orderBy:'name'">
 				        <div class="channel_icon-grid-view mod-index-0 pop-over"
 				            ng-class="{'activechannel': isActive(channel)}"
-						  	data-original-title="{{channel.name}} - {{channel.description}}" data-placement="auto" ng-click="openDetails(channel)" style="cursor:pointer;">
-                <img ng-src="{{channel.logo}}" width="70" height="70"/>
+						  	data-original-title="{{channel.name}} - {{channel.description}}" data-placement="auto" ng-click="openDetails(channel)" style="cursor:pointer;opacity: 0.3; filter: alpha(opacity=30);">
+                <a disabled><img ng-src="{{channel.logo}}" width="70" height="70"/></a>
               </div>
 				</li>
 			  </ul>
@@ -87,7 +87,7 @@
 			  	<li ng-repeat="channel in customchannelList | orderBy:'name'">
 				        <div class="channel_icon-grid-view mod-index-0 pop-over"
 				            ng-class="{'activechannel': isActive(channel)}"
-						  	data-original-title="{{channel.name}} - {{channel.description}}" data-placement="auto" ng-click="openDetails(channel)" style="cursor:pointer;">
+						  	data-original-title="{{channel.name}} - {{channel.description}}" data-placement="auto" ng-click="openDetails(channel)" style="cursor:pointer;opacity: 0.3; filter: alpha(opacity=30);">
                   <img ng-src="{{channel.logo}}" width="70" height="70"/>
               </div>
 				</li>
