--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
 
       <ul class='nav'>
 
-				<li class="auth"><a href="/login"><i class="fa fa-lock"></i> Sign In/Up</a></li>
+				<li class="auth"><!-- <a href="/login"><i class="fa fa-lock"></i> Sign In/Up</a> --></li>
 
         <li class='dropdown dark user-menu' style="display:none">
           <a class='dropdown-toggle' data-toggle='dropdown' href="#">
