--- a/public/pages/gateways.html
+++ b/public/pages/gateways.html
@@ -158,12 +158,12 @@
         <div class="form-group">
           <label for="plugin" class="col-sm-2 control-label">Plugin</label>
           <div class="col-sm-10">
-            <input type="text" ng-model="plugin" placeholder="plugin" class="form-control" disabled><br />
+            <input type="text" ng-model="selectedSubdevice.type" placeholder="plugin" class="form-control" disabled><br />
           </div>
         </div>
         <div>
           <br /><br />
-          <input type="text" ng-model="subDeviceName" placeholder="name" class="form-control" required><br />
+          <input type="text" ng-model="selectedSubdevice.name" placeholder="name" class="form-control" required><br />
           <div class="form-group" ng-repeat="deviceProperty in deviceProperties">
             <div ng-if="deviceProperty.type == 'string' || deviceProperty.type == 'number'">
               <input type="text" ng-model="deviceProperty.value" placeholder="{{deviceProperty.name}}" class="form-control" ng-required="deviceProperty.required"><!br />
