working on the home page

--- a/public/pages/home2.html
+++ b/public/pages/home2.html
@@ -18,6 +18,8 @@
   </div>
   <div id="slidecontent">
     <div class="slide">
+      <img src="/assets/images/nest.jpg" width="100%">
+
       <div class="slide-panel" data-in="top" data-out="top">
         <div id="spt-1" class="sptext">
           <span class="msg-ulysses">Welcome</span>
@@ -49,6 +51,8 @@
       </div>
     </div>
     <div class="slide">
+      <img src="/assets/images/hue.jpg" width="100%">
+
       <div class="slide-panel" data-in="top" data-out="top">
         <div id="spt-5" class="sptext">
           <span class="msg-welcome">Welcome</span>
@@ -78,11 +82,13 @@
       </div>
     </div>
     <div class="slide">
+      <img src="/assets/images/belkin.jpg" width="100%">
+
       <div class="slide-panel" data-in="top" data-out="top">
         <div id="spt-5" class="sptext">
+          <!-- <img src="/assets/images/ipad-presentation.png"> -->
           <span class="msg-welcome">Welcome to </span>
           <span class="msg-ulysses">Octoblu</span>
-
         </div>
       </div>
       <div class="slide-panel" data-in="bottom" data-out="bottom">
@@ -114,11 +120,13 @@
 
 <!-- ****************************************** ABOUT ****************************************** -->
 <div id="about" class="section">
-<h3 class="section-height">ABOUT OCTOBLU</h3>
+<h3 class="section-height" style="color:white;">FEATURING A DRAG AND DROP DESIGNER</h3>
 </div>
 
 <div class="container"><!--Container-->
   <div class="row"><!--Row-->
+    <br /><br /><br /><br />
+    <img src="/assets/images/designer.png" width="100%">
     <!-- <div class="sub-section margin-top-50 col-md-10 col-md-offset-1"> -->
     <div class="margin-top-50 col-md-10 col-md-offset-1">
     <h2 class="sub-section-height">
