added more details to alternative home page

--- a/public/pages/home2.html
+++ b/public/pages/home2.html
@@ -333,6 +333,9 @@
 
 </div><!--Container End-->
 
+<div id="services" class="section">
+<h3 class="section-height" style="color:white;">PRICING</h3>
+</div>
 
 
 <div class="pricing-bg">
