--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
         .container {
          width: 100%;
         }
-      }    
+      }
   </style>
 
 </head>
@@ -101,7 +101,7 @@
               </a>
             </li>
           </ul>
-        </li>    
+        </li>
 			</ul>
 		</nav>
 	</header>
@@ -112,7 +112,7 @@
     <div id='main-nav-bg' style="display:none;"></div>
       <nav id='main-nav' style="display:none;">
         <div class='navigation'>
-   
+
           <ul class='nav nav-stacked'>
             <li id="nav-dashboard" class='active'>
               <a href='/dashboard'>
@@ -161,7 +161,7 @@
                 <span>Admin</span>
               </a>
             </li>
-           
+
 
 
             <li id="nav-resources" class=''>
@@ -222,11 +222,11 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-route.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-animate.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-sanitize.js"></script>
-  
+
   <script src="/assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 	<script src="/angular/app.js"></script>
-  <script src="/angular/services.js"></script>  
+  <script src="/angular/services.js"></script>
   <script src="/angular/controllers.js"></script>
   <script src="/angular/controllers/community.js"></script>
   <script src="/angular/controllers/community-post.js"></script>
@@ -236,6 +236,8 @@
   <script src="/assets/javascripts/demeterScroll.js"></script>
   <script src="/assets/javascripts/underscore.js"></script>
   <script type="text/javascript" src="/assets/javascripts/canvasjs.min.js"></script>
+  <script src="/assets/javascripts/smoothScroll.js"></script>
+
 <!--
   <script>
     var socket;
@@ -244,7 +246,7 @@
       var skynetConfig = {
         "uuid": $.cookie('skynetuuid'),
         "token": $.cookie('skynettoken')
-      }    
+      }
       skynet(skynetConfig, function (e, skysocket) {
         if (e) throw e;
         socket = skysocket;
@@ -266,7 +268,7 @@
       (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
   }());
   </script>
-    
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
