home page tweaks

--- a/public/pages/home2.html
+++ b/public/pages/home2.html
@@ -174,7 +174,7 @@
 
 
 <!-- ****************************************** SERVICES ****************************************** -->
-<div id="services" class="section">
+<div id="services" class="section-dark">
 <h3 class="section-height" style="color:white;">SERVICES</h3>
 </div>
 
@@ -414,7 +414,7 @@
 
 
 <!-- ****************************************** OUR TEAM ****************************************** -->
-<div id="team" class="section">
+<div id="team" class="section-dark">
 <h3 class="section-height" style="color:white;">TESTIMONIALS</h3>
 </div>
 
@@ -445,7 +445,7 @@
 
 
 <!-- ****************************************** PORTFOLIO ****************************************** -->
-<div id="portfolio" class="section">
+<div id="portfolio" class="section-dark">
   <h3 class="section-height" style="color:white;">LATEST WORKS</h3>
 </div>
 
