fixed more anchor on home2

--- a/public/pages/home2.html
+++ b/public/pages/home2.html
@@ -34,13 +34,14 @@
         </div>
       </div>
       <!-- -->
-<!--       <div class="slide-panel" data-in="left" data-out="left">
+      <div class="slide-panel" data-in="left" data-out="left">
         <div id="spt-3" class="sptext">
-          <a type="button" class="btn btn-default-header btn-lg" href="#about">
+<!--           <a type="button" class="btn btn-default-header btn-lg" href="/home2#about"> -->
+          <a type="button" class="btn btn-default-header btn-lg" ng-click="gotoApis()">
                 <b>More Info</b>
           </a>
         </div>
-      </div> -->
+      </div>
       <!-- -->
       <div class="slide-panel" data-in="right" data-out="right">
         <div id="spt-4" class="sptext">
@@ -65,13 +66,13 @@
           Machine-to-Machine Instant Messaging network
         </div>
       </div>
-<!--       <div class="slide-panel" data-in="left" data-out="left">
+      <div class="slide-panel" data-in="left" data-out="left">
         <div id="spt-7" class="sptext">
-          <a type="button" class="btn btn-default-header btn-lg" href="#about">
+          <a type="button" class="btn btn-default-header btn-lg" ng-click="gotoApis()">
                 <b>More Info</b>
           </a>
         </div>
-      </div> -->
+      </div>
       <!-- -->
       <div class="slide-panel" data-in="right" data-out="right">
         <div id="spt-8" class="sptext">
@@ -96,13 +97,13 @@
           Drag and Drop Orchestration of Event Triggers of Things
         </div>
       </div>
-<!--       <div class="slide-panel" data-in="left" data-out="left">
+      <div class="slide-panel" data-in="left" data-out="left">
         <div id="spt-7" class="sptext">
-          <a type="button" class="btn btn-default-header btn-lg" href="#about">
+          <a type="button" class="btn btn-default-header btn-lg" ng-click="gotoApis()">
                 <b>More Info</b>
           </a>
         </div>
-      </div> -->
+      </div>
       <!-- -->
       <div class="slide-panel" data-in="right" data-out="right">
         <div id="spt-8" class="sptext">
@@ -120,8 +121,8 @@
 
 <!-- ****************************************** ABOUT ****************************************** -->
 
-
-<div id="about" class="section">
+<!-- <a name="about"></a> -->
+<div id="apis" class="section">
 <h3 class="section-height" style="color:white;">CONNECT SMART DEVICES TO CHANNELS</h3>
 </div>
 
@@ -129,7 +130,7 @@
 <!-- <img src="/assets/images/apis.png" width="100%"> -->
 </div>
 
-<div id="about" class="section">
+<div id="flow" class="section">
 <h3 class="section-height" style="color:white;">USING OUR SIMPLE DRAG AND DROP DESIGNER</h3>
 </div>
 
